# pdns

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeCache.txt  CMakeExternal.cmake  CMakeLists.txt  CMakeLists.txt.bak  CMakeListsExternal.txt  KafkaConnector.cpp  KafkaConnector.h  Makefile  PeriodicListPrunning.cpp  PeriodicListPrunning.h  README.md  TrafficeVolumeReduction.cpp  TrafficeVolumeReduction.h  cmake_install.cmake  config.h  main.cpp  passivedns.conf  passivedns.service
boost-prefix/src/boost-stamp/: boost-gitclone-lastrun.txt
boost-prefix/tmp/: boost-cfgcmd.txt  boost-gitclone.cmake  boost-gitupdate.cmake
docs/: Doxyfile  api.md
docs/html/: KafkaConnector_8h_source.html  PeriodicListPrunning_8h_source.html  TrafficeVolumeReduction_8h_source.html  annotated.html  classKafkaConnector-members.html  classKafkaConnector.html  classPeriodicListPrunning-members.html  classPeriodicListPrunning.html  classTrafficeVolumeReduction-members.html  classTrafficeVolumeReduction.html  classes.html  config_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  graph_legend.html  index.html  structCandidate-members.html  structCandidate.html  structDomainInfo-members.html  structDomainInfo.html
docs/html/search/: all_1.js  all_3.js  all_7.js  all_8.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_5.js
docs/latex/: annotated.tex  classKafkaConnector.tex  classPeriodicListPrunning.tex  classTrafficeVolumeReduction.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  refman.tex  structCandidate.tex  structDomainInfo.tex
docs/xml/: KafkaConnector_8cpp.xml  KafkaConnector_8h.xml  PeriodicListPrunning_8cpp.xml  PeriodicListPrunning_8h.xml  TrafficeVolumeReduction_8cpp.xml  TrafficeVolumeReduction_8h.xml  classKafkaConnector.xml  classPeriodicListPrunning.xml  classTrafficeVolumeReduction.xml  config_8h.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml  main_8cpp.xml  namespaceTins.xml  namespaceboost_1_1program__options.xml  namespacecppkafka.xml  namespacestd.xml  structCandidate.xml  structDomainInfo.xml
include/: KafkaConnector.h  PeriodicListPrunning.h  TrafficeVolumeReduction.h  config.h  httplib.h
json-prefix/tmp/: json-gitclone.cmake  json-gitupdate.cmake
lib/boost/lib/: libboost_atomic.so.1.70.0  libboost_container.so.1.70.0  libboost_context.so.1.70.0  libboost_contract.so.1.70.0  libboost_coroutine.so.1.70.0  libboost_date_time.so.1.70.0  libboost_fiber.so.1.70.0  libboost_graph.so.1.70.0  libboost_iostreams.so.1.70.0  libboost_locale.so.1.70.0  libboost_log.so.1.70.0  libboost_log_setup.so.1.70.0  libboost_math_c99.so.1.70.0  libboost_math_c99f.so.1.70.0  libboost_math_c99l.so.1.70.0  libboost_math_tr1.so.1.70.0  libboost_math_tr1f.so.1.70.0  libboost_math_tr1l.so.1.70.0  libboost_numpy27.so.1  libboost_numpy27.so.1.70.0  libboost_prg_exec_monitor.so.1.70.0  libboost_program_options.so.1.70.0  libboost_python27.so.1.70.0  libboost_random.so.1.70.0  libboost_regex.so.1.70.0  libboost_serialization.so.1.70.0  libboost_stacktrace_addr2line.so.1.70.0  libboost_stacktrace_backtrace.so.1  libboost_stacktrace_backtrace.so.1.70.0  libboost_stacktrace_basic.so.1.70.0  libboost_stacktrace_noop.so.1.70.0  libboost_type_erasure.so.1.70.0  libboost_unit_test_framework.so.1.70.0  libboost_wave.so.1.70.0  libboost_wserialization.so.1.70.0
lib/boost/lib/cmake/boost_numpy-1.70.0/: libboost_numpy-variant-shared.cmake  libboost_numpy-variant-static.cmake
lib/cppkafka/lib/: libcppkafka.so.0.3.1
lib/cppkafka/share/pkgconfig/: cppkafka.pc
lib/librdkafka/lib/: librdkafka++.so.1
lib/librdkafka/lib/pkgconfig/: rdkafka++-static.pc  rdkafka++.pc  rdkafka-static.pc  rdkafka.pc
lib/libtins/include/tins/: config.h
lib/libtins/lib/cmake/libtins/: libtinsConfig.cmake  libtinsConfigVersion.cmake  libtinsTargets-relwithdebinfo.cmake  libtinsTargets.cmake
lib/libtins/lib/pkgconfig/: libtins.pc
lib/openssl/include/openssl/: opensslconf.h
lib/openssl/lib/: libcrypto.so.3  libssl.so.3
lib/openssl/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
libtins-prefix/src/libtins-stamp/: libtins-gitinfo.txt
libtins-prefix/tmp/: libtins-cfgcmd.txt  libtins-gitclone.cmake  libtins-gitupdate.cmake
src/: KafkaConnector.cpp  PeriodicListPrunning.cpp  TrafficeVolumeReduction.cpp  main.cpp
